돔을 이용한 HTML 객체 저장

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,12 +4,12 @@
 <head>
 <meta charset="UTF-8">
 <title> 로그인 화면</title>
-<script src = "/js/home/login.js"></script>
+<script src = "/js/home/login.js" defer></script>
 </head>
 
 <body>
-<input type="text" placeholder="아이디"><br>
-<input type="text" placeholder="비밀번호"><br>
+<input id = "id" type="text" placeholder="아이디"><br>
+<input id = "password" type="text" placeholder="비밀번호"><br>
 <button>로그인</button>
 </body>
 
